# privacyforms.ai

./: .gitattributes  .gitignore  AGENTS.md  API_DESIGN.md  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/privacyforms_ai/: __init__.py  _version.py  ai.py  cli.py
tests/: __init__.py  conftest.py  test_ai.py  test_cli.py
