[project]
name = "privacyforms-ai"
version = "0.1.0"
description = "PrivacyForms AI - LLM integration module"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "llm>=0.28",
    "llm-anthropic>=0.24",
    "llm-moonshot>=0.3.1",
    "llm-ollama>=0.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
privacyforms-ai = "privacyforms_ai.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/privacyforms_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
