[project]
name = "privacyforms.ai"
version = "0.1.1"
description = "PrivacyForms AI - LLM integration module"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "llm>=0.28",
    "llm-anthropic>=0.24",
    "llm-moonshot>=0.3.1",
    "llm-ollama>=0.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.9.0",
    "ty>=0.0.20",
    "build>=1.0",
]

[project.scripts]
privacyforms-ai = "privacyforms_ai.cli:cli"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["privacyforms_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

