[project]
name = "privacyforms.ai"
dynamic = ["version"]
description = "PrivacyForms AI - LLM integration module"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Andreas Jung", email = "info@zopyx.com"},
]
license = "MIT"
keywords = ["llm", "cli", "openai", "anthropic", "ollama", "privacy", "moonshot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "llm>=0.28",
    "llm-anthropic>=0.24",
    "llm-moonshot>=0.3.1",
    "llm-ollama>=0.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.9.0",
    "ty>=0.0.20",
    "build>=1.0",
    "wheel>=0.45",
]

[project.scripts]
privacyforms-ai = "privacyforms_ai.cli:cli"

[project.urls]
Homepage = "https://github.com/zopyx/privacyforms.ai"
Repository = "https://github.com/zopyx/privacyforms.ai"
Issues = "https://github.com/zopyx/privacyforms.ai/issues"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["privacyforms_ai*"]

[tool.setuptools.dynamic]
version = {attr = "privacyforms_ai._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "PTH", # flake8-use-pathlib
    "TRY", # tryceratops (exception best practices)
    "RET", # flake8-return
    "RUF", # ruff-specific rules
]
ignore = ["E501", "TRY003"]  # Line too long (handled by formatter), avoid long messages outside exception class

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TRY002", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
